--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>La Boit'Azerty</h1>
+						<h1>La Boit'AZERTY</h1>
 						<p>Secrétaire juridique et administrative indépendante</p>
 					</header>
 
