--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>La Boit'AZERTY</h1>
-						<p>Secrétaire juridique et administrative indépendante</p>
+						<p>Assistante juridique et administrative indépendante</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Qui suis-je ?</a></li>
-							<li><a href="#first">Pourquoi une secrétaire indépendante ?</a></li>
+							<li><a href="#first">Pourquoi une assistante indépendante ?</a></li>
 							<li><a href="#second">Prestations</a></li>
 							<li><a href="#cta">Contact</a></li>
 						</ul>
@@ -42,13 +41,13 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Qui suis-je ?</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Ma formation de juriste (titulaire d'une maitrise de droit privé) et mon expérience (17 ans de secrétariat juridique en cabinets d'avocats et études notariales) me permettent de proposer un service de qualité.
+											<br>Actuellement basée a Lauris, j'interviens dans vos bureaux aux alentours d'Aix-en-Provence et de Salon-de-Provence ou en télétravail.
+											<br>Allégez votre travail, confiez-moi votre secrétariat ou votre standard téléphonique.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="generic.html" class="button">En savoir plus</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
