--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1>La Boit'AZERTY</h1>
+						<h1><strong>La Boit'AZERTY</strong></h1>
 						<p>Assistante juridique et administrative indépendante</p>
 					</header>
 
@@ -44,7 +44,9 @@
 											<h2>Qui suis-je ?</h2>
 										</header>
 										<p>Ma formation de juriste (titulaire d'une maitrise de droit privé) et mon expérience (17 ans de secrétariat juridique en cabinets d'avocats et études notariales) me permettent de proposer un service de qualité.
+											<br>
 											<br>Actuellement basée a Lauris, j'interviens dans vos bureaux aux alentours d'Aix-en-Provence et de Salon-de-Provence ou en télétravail.
+											<br>
 											<br>Allégez votre travail, confiez-moi votre secrétariat ou votre standard téléphonique.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">En savoir plus</a></li>
