--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 											<br>Allégez votre travail, confiez-moi votre secrétariat ou votre standard téléphonique.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">En savoir plus</a></li>
+											<li><a href="elements.html" class="button">elements</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
