--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 											<li><a href="elements.html" class="button">elements</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/teletravail.jpg" alt="" /></span>
 								</div>
 							</section>
 
