--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Quels services ?</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Quand avoir recours à une assistante indépendante?</h3>
+										<ul>
+											<li>Accomplissement de démarches administratives et juridiques.</li>
+											<li>Surcroit de travail.</li>
+											<li>Remplacement temporaire.</li>
+											<li>Besoin d’une aide régulière ou occasionnelle.</li>
+										</ul>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
