--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Pour qui ?</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<ul>
+											<li>les professionnels du droit: avocats, notaires, huissiers, experts...</li>
+											<li>ou tout autre secteur d'activité .</li>
+										</ul>
 									</li>
 								</ul>
 								<ul class="features">
