--- a/index.html
+++ b/index.html
@@ -86,7 +86,22 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Quels sont les avantages ?</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<div class="row">
+											<div class="col-6 col-12-medium">
+												<ul>
+													<li>Dolor pulvinar magna etiam.</li>
+													<li>Sagittis sed lorem adipiscing.</li>
+													<li>Felis enim etiam feugiat.</li>
+													<li>Ipsum lorem nullam consequat.</li>
+												</ul>
+											</div>
+											<div class="col-6 col-12-medium">
+												<ul>
+													<li>Dolor pulvinar magna etiam.</li>
+													<li>Sagittis sed lorem adipiscing.</li>
+													<li>Felis enim etiam feugiat.</li>
+													<li>Ipsum lorem nullam consequat.</li>
+												</ul>
 									</li>
 								</ul>
 							</section>
