--- a/index.html
+++ b/index.html
@@ -89,18 +89,16 @@
 										<div class="row">
 											<div class="col-6 col-12-medium">
 												<ul>
-													<li>Dolor pulvinar magna etiam.</li>
-													<li>Sagittis sed lorem adipiscing.</li>
-													<li>Felis enim etiam feugiat.</li>
-													<li>Ipsum lorem nullam consequat.</li>
+													<li>La simplicité : pas de contrainte administrative liée à une embauche</li>
+													<li>Sans engagement de durée : pas de contrat de travail</li>
+													<li>Pas de charges sociales</li>
 												</ul>
 											</div>
 											<div class="col-6 col-12-medium">
 												<ul>
-													<li>Dolor pulvinar magna etiam.</li>
-													<li>Sagittis sed lorem adipiscing.</li>
-													<li>Felis enim etiam feugiat.</li>
-													<li>Ipsum lorem nullam consequat.</li>
+													<li>Un service immédiat : disponibilité permettant de répondre rapidement à la demande</li>
+													<li>Facturation à la tâche : plusieurs tarifs et forfaits sont proposés</li>
+													<li>Déductibilité des factures</li>
 												</ul>
 									</li>
 								</ul>
