--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Stellar by HTML5 UP</title>
+		<title>La Boit'Azerty</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Generic</h1>
-						<p>Ipsum dolor sit amet nullam</p>
+						<h1><strong>La Boit'AZERTY</strong></h1>
+						<p>Assistante juridique et administrative indépendante</p>
 					</header>
 
 				<!-- Main -->
@@ -29,12 +29,20 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<h2>Magna feugiat lorem</h2>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
-								<h2>Tempus veroeros</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
-							</section>
+								<ul class="actions">
+									<li><a href="index.html" class="button">Retour</a></li>
+								</ul>
+								<h2>Qui suis-je ?</h2>
+								<p>Titulaire d'une maîtrise de droit privé et du diplôme de l'Institut des Sciences Pénales et de Criminologie, j'ai suivi également une formation en secrétariat et informatique.
+									<br><br>Je possède une expérience professionnelle variée aussi bien dans le domaine juridique que dans le secrétariat classique.
+									<br><br>J'ai été secrétaire juridique salariée pendant plus de sept ans dans plusieurs cabinets d’avocats, et dans une étude notariale.
+									<br><br>J'ai approfondi mes connaissances juridiques en tant qu’informatrice juriste au Centre d'Information des Droits et des Familles.
+									<br><br>J'ai également travaillé comme secrétaire commerciale et comme secrétaire comptable.
+									<br><br>J’ai pu effectuer le suivi juridique des dossiers d'une entreprise. 
+									<br><br>Durant ces 10 années d'expérience, j’ai prouvé ma capacité d’adaptation à divers secteurs d’activité et développé mon savoir-faire.
+									<br><br>La boit'AZERTY est née le 17 juillet 2014 de la volonté de proposer mes services non pas à une seule société mais à plusieurs, ainsi qu'aux particuliers.
+									<br><br>Le besoin est réel pour les sociétés qui débutent, dont le volume de travail ne justifie pas l'emploi d'un salarié à temps plein ou dont les ressources ne permettent pas de financer un salaire (avec la lourdeur des charges sociales).</p>
+								</section>
 
 					</div>
 
