--- a/generic.html
+++ b/generic.html
@@ -30,16 +30,16 @@
 							<section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<ul class="actions">
-									<li><a href="index.html" class="button">Retour</a></li>
+									<li><a href="index.html" class="button primary">Retour</a></li>
 								</ul>
 								<h2>Qui suis-je ?</h2>
-								<p>Titulaire d'une maîtrise de droit privé et du diplôme de l'Institut des Sciences Pénales et de Criminologie, j'ai suivi également une formation en secrétariat et informatique.
-									<br><br>Je possède une expérience professionnelle variée aussi bien dans le domaine juridique que dans le secrétariat classique.
-									<br><br>J'ai été secrétaire juridique salariée pendant plus de sept ans dans plusieurs cabinets d’avocats, et dans une étude notariale.
-									<br><br>J'ai approfondi mes connaissances juridiques en tant qu’informatrice juriste au Centre d'Information des Droits et des Familles.
-									<br><br>J'ai également travaillé comme secrétaire commerciale et comme secrétaire comptable.
-									<br><br>J’ai pu effectuer le suivi juridique des dossiers d'une entreprise. 
-									<br><br>Durant ces 10 années d'expérience, j’ai prouvé ma capacité d’adaptation à divers secteurs d’activité et développé mon savoir-faire.
+								<p>Titulaire d'une <strong>maîtrise de droit privé</strong> et du diplôme de l'Institut des Sciences Pénales et de Criminologie, j'ai suivi également une <strong>formation en secrétariat et informatique</strong>.
+									<br><br>Je possède une <strong>expérience professionnelle variée</strong> aussi bien dans le domaine juridique que dans le secrétariat classique.
+									<br><br>J'ai été <strong>secrétaire juridique</strong> salariée pendant plus de sept ans dans plusieurs cabinets d’avocats, et dans une étude notariale.
+									<br><br>J'ai approfondi mes connaissances juridiques en tant qu’<strong>informatrice juriste</strong> au Centre d'Information des Droits et des Familles.
+									<br><br>J'ai également travaillé comme <strong>secrétaire commerciale</strong> et comme <strong>secrétaire comptable</strong>.
+									<br><br>J’ai pu effectuer le <strong>suivi juridique</strong> des dossiers d'une entreprise. 
+									<br><br>Durant ces 10 années d'expérience, j’ai prouvé ma <strong>capacité d’adaptation</strong> à divers secteurs d’activité et développé mon <strong>savoir-faire</strong>.
 									<br><br>La boit'AZERTY est née le 17 juillet 2014 de la volonté de proposer mes services non pas à une seule société mais à plusieurs, ainsi qu'aux particuliers.
 									<br><br>Le besoin est réel pour les sociétés qui débutent, dont le volume de travail ne justifie pas l'emploi d'un salarié à temps plein ou dont les ressources ne permettent pas de financer un salaire (avec la lourdeur des charges sociales).</p>
 								</section>
