--- a/generic.html
+++ b/generic.html
@@ -28,7 +28,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<span class="image main"><img src="images/teletravail.jpg" alt="" /></span>
 								<ul class="actions">
 									<li><a href="index.html" class="button primary">Retour</a></li>
 								</ul>
