--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<li><a href="#intro" class="active">Qui suis-je ?</a></li>
 							<li><a href="#first">Pourquoi une assistante indépendante ?</a></li>
 							<li><a href="#second">Prestations</a></li>
-							<li><a href="#cta">Contact</a></li>
+							<li><a href="#cta">Contactez-moi</a></li>
 						</ul>
 					</nav>
 
@@ -144,7 +144,7 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Contact</h2>
+									<h2>Contactez-moi</h2>
 									<form method="post" action="#">
 											<div class="row gtr-uniform">
 												<div class="col-6 col-12-xsmall">
