--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<li><a href="#intro" class="active">Qui suis-je ?</a></li>
 							<li><a href="#first">Pourquoi une assistante indépendante ?</a></li>
 							<li><a href="#second">Prestations</a></li>
-							<li><a href="#cta">Contactez-moi</a></li>
+							<li><a href="#footer">Contactez</a></li>
 						</ul>
 					</nav>
 
@@ -139,30 +139,6 @@
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
-							</section>
-
-						<!-- Get Started -->
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Contactez-moi</h2>
-									<form method="post" action="#">
-											<div class="row gtr-uniform">
-												<div class="col-6 col-12-xsmall">
-													<input type="text" name="demo-name" id="demo-name" value="" placeholder="Nom" />
-												</div>
-												<div class="col-6 col-12-xsmall">
-													<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
-												</div>
-												<div class="col-12">
-													<textarea name="demo-message" id="demo-message" placeholder="Ecrivez moi" rows="6"></textarea>
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><input type="submit" value="Envoyer" class="primary" /></li>
-													</ul>
-												</div>
-											</div>
-										</form>
 							</section>
 
 					</div>
