--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="image"><img src="images/stock-photo-woman-writes-in-notebook-with-laptop.jpg" alt="" /></span>
+										<span class="icon major style3 fa-copy"></span>
 										<h3>Quand avoir recours à une assistante indépendante?</h3>
 										<ul>
 											<li>Accomplissement de démarches administratives et juridiques.</li>
