--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
 								<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span><strong>Votre secrétaire à distance :</strong> La distance n'est plus un frein, elle peut même être un atout : 
 									<ul>
 									<li>écononomies réalisées : pas de bureau, j'utilise mon matériel et vous ne payez que le travail réalisé</li>
-									<li>utilisation des nouvelles technologies : visioconférence, partage de documents<</li>
-										/ul>
+									<li>utilisation des nouvelles technologies : visioconférence, partage de documents</li>
+									</ul>
 									</p>
-										<p><span class="image right"><img src="images/pic06.jpg" alt="" /></span>Fringilla nisl. Don</p>
+										<p><span class="image right"><img src="images/pic06.jpg" alt="" /></span><strong>Votre secrétaire sur site :</strong> Je travaille dans vos locaux : une table où je peux poser mon ordinateur portable suffit.
+											<br>La confiance est le maitre mot : je peux venir en votre absence.</p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Details des prestations</a></li>
