--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 											<br>
 											<br>Allégez votre travail, confiez-moi votre secrétariat ou votre standard téléphonique.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">En savoir plus</a></li>
+											<li><a href="azerty.html" class="button">En savoir plus</a></li>
 											<li><a href="elements.html" class="button">elements</a></li>
 										</ul>
 									</div>
