--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 											<br>La confiance est le maitre mot : je peux venir en votre absence.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Details des prestations</a></li>
+										<li><a href="prestations.html" class="button">Details des prestations</a></li>
 									</ul>
 								</footer>
 							</section>
