--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 													<li>Facturation à la tâche : plusieurs tarifs et forfaits sont proposés</li>
 													<li>Déductibilité des factures</li>
 												</ul>
+											</div>
+										</div>
 									</li>
 								</ul>
 							</section>
