--- a/prestations.html
+++ b/prestations.html
@@ -31,12 +31,20 @@
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<h2>Professionnels du droit</h2>
 								<p>Secrétariat classique :
-								<ul>
-									<li>tenue d'agenda, prise de rendez-vous</li>
-									<li>traitement de vos mails</li>
-									<li>rédaction de courriers divers</li>
-									<li>classement, archivage</li>
-								</ul></p>
+								<div class="row">
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Tenue d'agenda, prise de rendez-vous</li>
+											<li>Traitement de vos mails</li>
+										</ul>
+									</div>
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Rédaction de courriers divers</li>
+											<li>classement, archivage</li>
+										</ul>
+									</div>
+								</div></p>
 								<p>Permanence téléphonique :
 								<ul>
 									<li>gestion de votre standard téléphonique par transfert d'appel</li>
