--- a/prestations.html
+++ b/prestations.html
@@ -46,17 +46,71 @@
 									</div>
 								</div></p>
 								<p>Permanence téléphonique :
-								<ul>
-									<li>gestion de votre standard téléphonique par transfert d'appel</li>
-									<li>synthèse des appels, messages et rendez-vous par mail en temps réel</li>
-								</ul></p>
-								<p>secrétariat juridique : maîtrise de Kleos, Adapps, Clior
-								<ul>
-									<li>frappe de vos courriers</li>
-									<li>communication de pièces</li>
-								</ul></p>
+								<div class="row">
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Gestion de votre standard téléphonique par transfert d'appel</li>
+										</ul>
+									</div>
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Synthèse des appels, messages et rendez-vous par mail en temps réel</li>
+										</ul>
+									</div>
+								</div></p>
+								<p>Secrétariat juridique : maîtrise de Kleos, Adapps, Clior
+								<div class="row">
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Frappe de vos courriers</li>
+											<li>Communication de pièces</li>
+											<li>RPVA</li>
+										</ul>
+									</div>
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Note d'honoraires, relance</li>
+											<li>Préparation de dossiers de plaidoirie</li>
+											<li>Saisie d'actes : assignation, conclusions, rapport d'expertise, constat d'huissier</li>
+										</ul>
+									</div>
+								</div></p>
+								<p>Recherches juridiques</p>
+								<p>Secrétariat expert judiciaire</p>
 								<h2>Entreprises</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+								<p>Secrétariat classique :
+								<div class="row">
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Tenue d'agenda, prise de rendez-vous, traitement de vos mails</li>
+											<li>Rédaction de courriers divers</li>
+											<li>Classement, archivage</li>
+										</ul>
+									</div>
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Saisie de devis, de factures</li>
+											<li>PSuivi et relance des impayés</li>
+											<li>Rapprochement bancaire</li>
+										</ul>
+									</div>
+								</div></p>
+								<p>Permanence téléphonique :
+								<div class="row">
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Ggestion de votre standard téléphonique par transfert d'appel</li>
+										</ul>
+									</div>
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Synthèse des appels, messages et rendez-vous par mail en temps réel</li>
+										</ul>
+									</div>
+								</div></p>
+								<p>Suivi des contentieux que vous pouvez avoir avec un fournisseur, un salarié, un client, l'administration...</p>
+								<p>Formalités d'approbation des comptes : convocation, rédaction du procès-verbal d'assemblée générale, du rapport de gestion, envoi au greffe...</p>
+							<span class="image main"><img src="images/teletravail.jpg" alt="" /></span>	
 							</section>
 
 					</div>
