--- a/prestations.html
+++ b/prestations.html
@@ -28,7 +28,9 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<ul class="actions">
+									<li><a href="index.html" class="button primary">Retour</a></li>
+								</ul>
 								<h2>Professionnels du droit</h2>
 								<p>Secrétariat classique :
 								<div class="row">
