--- a/prestations.html
+++ b/prestations.html
@@ -34,7 +34,7 @@
 								<h2>Professionnels du droit</h2>
 								<p>Secrétariat classique :
 								<div class="row">
-									<div class="col-6 col-12-medium">
+									<div class="col-6 col-12-small">
 										<ul>
 											<li>Tenue d'agenda, prise de rendez-vous</li>
 											<li>Traitement de vos mails</li>
@@ -49,7 +49,7 @@
 								</div></p>
 								<p>Permanence téléphonique :
 								<div class="row">
-									<div class="col-6 col-12-medium">
+									<div class="col-6 col-12-large">
 										<ul>
 											<li>Gestion de votre standard téléphonique par transfert d'appel</li>
 										</ul>
