--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 											<li>Besoin d’une aide régulière ou occasionnelle.</li>
 										</ul>
 									</li>
+								</ul>
+								<ul class="features">
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Pour qui ?</h3>
