--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="first" class="main">
 								<header class="major">
 									<h2>Pourquoi une assistante indépendante ?</h2>
 								</header>
