--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 											<br>Allégez votre travail, confiez-moi votre secrétariat ou votre standard téléphonique.</p>
 										<ul class="actions">
 											<li><a href="azerty.html" class="button">En savoir plus</a></li>
-											<li><a href="elements.html" class="button">elements</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/teletravail.jpg" alt="" /></span>
@@ -151,8 +150,8 @@
 								<dd><a href="#">laboitazerty@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/sandrine-peyle-secretairejuridiqueindependante-aix-en-provence/" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiBu4iKoNCBAxXwSUEAHRonChgQFnoECBIQAQ&url=https%3A%2F%2Fwww.facebook.com%2Fpeylesandrinesecretaire29%2F%3Flocale%3Dfr_FR&usg=AOvVaw2oVfkUNLjRROCihleXYvro&opi=89978449" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
