--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="image"><img src="images/slogan.jpg" alt="" /></span>
 										<h3>Quand avoir recours à une assistante indépendante?</h3>
 										<ul>
 											<li>Accomplissement de démarches administratives et juridiques.</li>
@@ -75,7 +75,6 @@
 								</ul>
 								<ul class="features">
 									<li>
-										<span class="icon major style3 fa-copy"></span>
 										<h3>Pour qui ?</h3>
 										<ul>
 											<li>les professionnels du droit: avocats, notaires, huissiers, experts...</li>
@@ -84,8 +83,7 @@
 									</li>
 								</ul>
 								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
+									<li
 										<h3>Quels sont les avantages ?</h3>
 										<div class="row">
 											<div class="col-6 col-12-medium">
@@ -114,7 +112,7 @@
 									<p>Je propose differentes prestations, en teletravail ou sur site, en prestation ponctuelles ou regulieres, le principe reste le meme :</p>
 								</header>
 								<p>J'utilise vos logiciels si vous avez un ordinateur ou je peux travailler sur mon matériel. Je possède le pack office. J'utilise google drive pour le partage de fichiers. J'utilise express scribe pour la retranscription audio ou un simple dictaphone. Nous pouvons communiquer par téléphone, mail ou skype.</p>
-								<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span><strong>Votre secrétaire à distance :</strong> La distance n'est plus un frein, elle peut même être un atout : 
+								<p><span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span><strong>Votre secrétaire à distance :</strong> La distance n'est plus un frein, elle peut même être un atout : 
 									<ul>
 									<li>écononomies réalisées : pas de bureau, j'utilise mon matériel et vous ne payez que le travail réalisé</li>
 									<li>utilisation des nouvelles technologies : visioconférence, partage de documents</li>
@@ -124,7 +122,7 @@
 								<br>
 								<br>
 									</p>
-										<p><span class="image right"><img src="images/pic06.jpg" alt="" /></span><strong>Votre secrétaire sur site :</strong> Je travaille dans vos locaux : une table où je peux poser mon ordinateur portable suffit.
+										<p><span class="image right"><img src="images/teletravail.jpg" alt="" /></span><strong>Votre secrétaire sur site :</strong> Je travaille dans vos locaux : une table où je peux poser mon ordinateur portable suffit.
 											<br>La confiance est le maitre mot : je peux venir en votre absence.</p>
 								<footer class="major">
 									<ul class="actions special">
