--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
 									<p>Je propose differentes prestations, en teletravail ou sur site, en prestation ponctuelles ou regulieres, le principe reste le meme :</p>
 								</header>
 								<p>J'utilise vos logiciels si vous avez un ordinateur ou je peux travailler sur mon matériel. Je possède le pack office. J'utilise google drive pour le partage de fichiers. J'utilise express scribe pour la retranscription audio ou un simple dictaphone. Nous pouvons communiquer par téléphone, mail ou skype.</p>
-								<p><span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span><strong>Votre secrétaire à distance :</strong> La distance n'est plus un frein, elle peut même être un atout : 
+								<p><span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span><div class="text-container"><h1><strong>Votre secrétaire à distance :</strong> La distance n'est plus un frein, elle peut même être un atout : 
 									<ul>
 									<li>écononomies réalisées : pas de bureau, j'utilise mon matériel et vous ne payez que le travail réalisé</li>
 									<li>utilisation des nouvelles technologies : visioconférence, partage de documents</li>
 									</ul>
+									</h1>
+									</div>
 									<br>
 								<br>
 								<br>
