--- a/index.html
+++ b/index.html
@@ -84,6 +84,28 @@
 								</ul>
 								<ul class="features">
 									<li
+										<div class="row">
+											<div class="col-6 col-12-medium">
+												<h3>Quels sont les avantages ?</h3>
+												<ul>
+													<li>La simplicité : pas de contrainte administrative liée à une embauche</li>
+													<li>Sans engagement de durée : pas de contrat de travail</li>
+													<li>Pas de charges sociales</li>
+												</ul>
+											</div>
+											<div class="col-6 col-12-medium">
+												<h3>Quels sont les avantages ?</h3>
+												<ul>
+													<li>Un service immédiat : disponibilité permettant de répondre rapidement à la demande</li>
+													<li>Facturation à la tâche : plusieurs tarifs et forfaits sont proposés</li>
+													<li>Déductibilité des factures</li>
+												</ul>
+											</div>
+										</div>
+									</li>
+								</ul>
+								<ul class="features">
+									<li
 										<h3>Quels sont les avantages ?</h3>
 										<div class="row">
 											<div class="col-6 col-12-medium">
