--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
 									<li
 										<div class="row">
 											<div class="col-6 col-12-medium">
-												<h3>Quels sont les avantages ?</h3>
+												<h3>Quand avoir recours à une assistante indépendante?</h3>
 												<ul>
-													<li>La simplicité : pas de contrainte administrative liée à une embauche</li>
-													<li>Sans engagement de durée : pas de contrat de travail</li>
-													<li>Pas de charges sociales</li>
+													<li>Accomplissement de démarches administratives et juridiques.</li>
+													<li>Surcroit de travail.</li>
+													<li>Remplacement temporaire.</li>
+													<li>Besoin d’une aide régulière ou occasionnelle.</li>
 												</ul>
 											</div>
 											<div class="col-6 col-12-medium">
-												<h3>Quels sont les avantages ?</h3>
+												<h3>Pour qui ?</h3>
 												<ul>
-													<li>Un service immédiat : disponibilité permettant de répondre rapidement à la demande</li>
-													<li>Facturation à la tâche : plusieurs tarifs et forfaits sont proposés</li>
-													<li>Déductibilité des factures</li>
+													<li>les professionnels du droit: avocats, notaires, huissiers, experts...</li>
+													<li>ou tout autre secteur d'activité .</li>
 												</ul>
 											</div>
 										</div>
