--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 											<br>
 											<br>Allégez votre travail, confiez-moi votre secrétariat ou votre standard téléphonique.</p>
 										<ul class="actions">
-											<li><a href="azerty.html" class="button">En savoir plus</a></li>
+											<li><a href="azerty.html" class="button primary">En savoir plus</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/teletravail.jpg" alt="" /></span>
@@ -128,7 +128,7 @@
 											<br>La confiance est le maitre mot : je peux venir en votre absence.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="prestations.html" class="button">Details des prestations</a></li>
+										<li><a href="prestations.html" class="button primary">Details des prestations</a></li>
 									</ul>
 								</footer>
 							</section>
