--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Prestations</h2>
-									<p>Je propose differentes prestations, en teletravail ou sur site, en prestation ponctuelles ou regulieres, le principe reste le meme :</p>
+									<p>Je propose différentes prestations, en télétravail ou sur site, en prestations ponctuelles ou régulieres, le principe reste le même :</p>
 								</header>
 								<p>J'utilise vos logiciels si vous avez un ordinateur ou je peux travailler sur mon matériel. Je possède le pack office. J'utilise google drive pour le partage de fichiers. J'utilise express scribe pour la retranscription audio ou un simple dictaphone. Nous pouvons communiquer par téléphone, mail ou skype.</p>
 								<div class="aligned-content">
