--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<li><a href="#intro" class="active">Qui suis-je ?</a></li>
 							<li><a href="#first">Pourquoi une assistante indépendante ?</a></li>
 							<li><a href="#second">Prestations</a></li>
-							<li><a href="#footer">Contactez</a></li>
+							<li><a href="#footer">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -45,9 +45,9 @@
 										</header>
 										<p>Ma formation de juriste (titulaire d'une maitrise de droit privé) et mon expérience (17 ans de secrétariat juridique en cabinets d'avocats et études notariales) me permettent de proposer un service de qualité.
 											<br>
-											<br>Actuellement basée a Lauris, j'interviens dans vos bureaux aux alentours d'Aix-en-Provence et de Salon-de-Provence ou en télétravail.
+											<br>J'interviens dans vos bureaux (secteurs Aix-en-Provence, Salon-de-Provence, Cavaillon) ou en télétravail.
 											<br>
-											<br>Allégez votre travail, confiez-moi votre secrétariat ou votre standard téléphonique.</p>
+											<br>Allégez votre travail, confiez-moi votre secrétariat.</p>
 										<ul class="actions">
 											<li><a href="azerty.html" class="button primary">En savoir plus</a></li>
 										</ul>
