--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
 									<li>
 										<span class="image"><img src="images/slogan.jpg" alt="" /></span>
 										<br>
-										<h3>Quand avoir recours à une assistante indépendante?</h3>
+										<h3>Pourquoi avoir recours à une assistante indépendante?</h3>
 										<ul>
-											<li>Accomplissement de démarches administratives et juridiques.</li>
-											<li>Surcroit de travail.</li>
-											<li>Remplacement temporaire.</li>
+											<li>Surcroit de travail.</li>										<li>Surcroit de travail.</li>
+											<li>Remplacement temporaire de votre assistante habituelle.</li>
 											<li>Besoin d’une aide régulière ou occasionnelle.</li>
 										</ul>
 									</li>
@@ -77,6 +76,8 @@
 								<ul class="features">
 									<li>
 										<h3>Pour qui ?</h3>
+										<div class="row">
+											<div class="col-6 col-12-medium">
 										<ul>
 											<li>les professionnels du droit: avocats, notaires, huissiers, experts...</li>
 											<li>ou tout autre secteur d'activité .</li>
@@ -91,7 +92,7 @@
 												<ul>
 													<li>La simplicité : pas de contrainte administrative liée à une embauche</li>
 													<li>Sans engagement de durée : pas de contrat de travail</li>
-													<li>Pas de charges sociales</li>
+													<li>Pas de charges sociales, ni de frais lié à l'établissement d'une fiche de paie</li>
 												</ul>
 											</div>
 											<div class="col-6 col-12-medium">
