--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										<br>
 										<h3>Pourquoi avoir recours à une assistante indépendante?</h3>
 										<ul>
-											<li>Surcroit de travail.</li>										<li>Surcroit de travail.</li>
+											<li>Surcroit de travail.</li>
 											<li>Remplacement temporaire de votre assistante habituelle.</li>
 											<li>Besoin d’une aide régulière ou occasionnelle.</li>
 										</ul>
