--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 								<header class="major">
 									<h2>Pourquoi une assistante indépendante ?</h2>
 								</header>
+										<ul>
+											<li>Surcroit de travail.</li>
+											<li>Remplacement temporaire de votre assistante habituelle.</li>
+											<li>Besoin d’une aide régulière ou occasionnelle.</li>
+										</ul>
 								<ul class="features">
 									<li>
 										<span class="image"><img src="images/slogan.jpg" alt="" /></span>
