--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 								<header class="major">
 									<h2>Pourquoi une assistante indépendante ?</h2>
 								</header>
+								<ul class="features">
 										<ul>
 											<li>Surcroit de travail.</li>
 											<li>Remplacement temporaire de votre assistante habituelle.</li>
