--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								</header>
 								<ul class="features">
 										<ul>
-											<bold>Surcroit de travail.</li>
+											<li>Surcroit de travail.</li>
 											<li>Remplacement temporaire de votre assistante habituelle.</li>
 											<li>Besoin d’une aide régulière ou occasionnelle.</li>
 										</ul>
