--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 								</header>
 								<ul class="features">
 										<ul>
-											Surcroit de travail
-											Remplacement temporaire de votre assistante habituelle.
-											Besoin d’une aide régulière ou occasionnelle.
+											<li>Surcroit de travail</li>
+											<li>Remplacement temporaire de votre assistante habituelle</li>
+											<li>Besoin d’une aide régulière ou occasionnelle</li>
 										</ul>
 								<ul class="features">
 									<li>
