--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 									<li>
 										<h3>Pour qui ?</h3>
 										<ul>
-											<li>les professionnels du droit: avocats, notaires, huissiers, experts...</li>
-											<li>ou tout autre secteur d'activité.</li>
+											<li>Les professionnels du droit : avocats, notaires, huissiers, experts...</li>
+											<li>Ou tout autre secteur d'activité.</li>
 										</ul>
 									</li>
 								</ul>
