--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Prestations</h2>
-									<p>Je propose différentes prestations, en télétravail ou sur site, en prestations ponctuelles ou régulières, le principe reste le même :</p>
+									<p>Je propose différentes prestations, en télétravail ou sur site, de manière ponctuelle ou régulière :</p>
 								</header>
-								<p>J'utilise vos logiciels si vous avez un ordinateur ou je peux travailler sur mon matériel. Je possède le pack office. J'utilise google drive pour le partage de fichiers. J'utilise express scribe pour la retranscription audio ou un simple dictaphone. Nous pouvons communiquer par téléphone, mail ou skype.</p>
+								<p>J'utilise vos logiciels si vous avez un ordinateur ou je peux travailler sur mon matériel. Je possède le pack office. J'utilise google drive pour le partage de fichiers. J'utilise express scribe pour la retranscription audio ou un simple dictaphone. Nous pouvons communiquer par téléphone, mail ou WhatsApp.</p>
 								<div class="aligned-content">
-								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span><strong>Votre secrétaire à distance :</strong> La distance n'est plus un frein, elle peut même être un atout : 
+								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span><strong>Votre secrétaire à distance : 
 									<ul>
 									<li>écononomies réalisées : pas de bureau, j'utilise mon matériel et vous ne payez que le travail réalisé</li>
 									<li>utilisation des nouvelles technologies : visioconférence, partage de documents</li>
