--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 											<br>
 											<br>J'interviens dans vos bureaux (secteurs Aix-en-Provence, Salon-de-Provence, Cavaillon) ou en télétravail.
 											<br>
-											<br>Fini le stress et les journées interminables, allégez votre travail, contactez moi.</p>
+											<br><strong>Fini le stress et les journées interminables, allégez votre travail, contactez moi.</strong></p>
 										<ul class="actions">
 											<li><a href="azerty.html" class="button primary">En savoir plus</a></li>
 										</ul>
