--- a/index.html
+++ b/index.html
@@ -109,9 +109,14 @@
 								</header>
 								<p>J'utilise vos logiciels si vous avez un ordinateur ou je peux travailler sur mon matériel. Je possède le pack office. J'utilise google drive pour le partage de fichiers. J'utilise express scribe pour la retranscription audio ou un simple dictaphone. Nous pouvons communiquer par téléphone, mail ou WhatsApp.</p>
 								<div class="aligned-content">
-								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span><strong>Votre secrétaire à distance : 
+								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span><strong>Votre secrétaire à distance : </strong>
 									<ul>
-									<li>écononomies réalisées : pas de bureau, j'utilise mon matériel et vous ne payez que le travail réalisé</li>
+									<li>Les modalités d’exécution de la mission :</li>
+									<li>Selon vos besoins, nous pouvons convenir de bloquer un créneau horaire durant lequel je reste disponible pour vous, ce qui permet une meilleure réactivité selon les tâches à accomplir.</li>
+									<li>Ou si vous préférez, je ne travaille pour vous qu’à la demande. Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec un délai pour ce faire. Je réalise ce travail et vous l’adresse pour validation.</li>
+									<li>Je peux travailler sur vos logiciels métiers, vos drives. La confiance et la confidentialité sont les maîtres mots.</li>
+									<br>
+									<li>Le télétravail permet de réaliser des économies : pas de bureau dédié, j'utilise mon matériel et vous ne payez que le travail réalisé</li>
 									<li>utilisation des nouvelles technologies : visioconférence, partage de documents</li>
 									</ul>
 									<br>
