--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								<div class="aligned-content">
 								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span> <strong>Votre secrétaire à distance : </strong>
 									<ul>
-									<li>Les modalités d’exécution de la mission :</li>
+									<p>Les modalités d’exécution de la mission :</p>
 									<li>Selon vos besoins, nous pouvons convenir de bloquer un créneau horaire durant lequel je reste disponible pour vous, ce qui permet une meilleure réactivité selon les tâches à accomplir.</li>
 									<li>Ou si vous préférez, je ne travaille pour vous qu’à la demande. Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec un délai pour ce faire. Je réalise ce travail et vous l’adresse pour validation.</li>
 									<li>Je peux travailler sur vos logiciels métiers, vos drives. La confiance et la confidentialité sont les maîtres mots.</li>
