--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
 								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span> <strong>Votre secrétaire à distance : </strong>
 									<ul>
 									<p>Les modalités d’exécution de la mission :</p>
-									<li>Selon vos besoins, nous pouvons convenir de bloquer un créneau horaire durant lequel je reste disponible pour vous, ce qui permet une meilleure réactivité selon les tâches à accomplir.</li>
-									<li>Ou si vous préférez, je ne travaille pour vous qu’à la demande. Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec un délai pour ce faire. Je réalise ce travail et vous l’adresse pour validation.</li>
-									<li>Je peux travailler sur vos logiciels métiers, vos drives. La confiance et la confidentialité sont les maîtres mots.</li>
-									<br>
-									<li>Le télétravail permet de réaliser des économies : pas de bureau dédié, j'utilise mon matériel et vous ne payez que le travail réalisé</li>
+									<p>Selon vos besoins, nous pouvons convenir de bloquer un créneau horaire durant lequel je reste disponible pour vous, ce qui permet une meilleure réactivité selon les tâches à accomplir.</p>
+									<p>Ou si vous préférez, je ne travaille pour vous qu’à la demande. Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec un délai pour ce faire. Je réalise ce travail et vous l’adresse pour validation.</p>
+									<p>Je peux travailler sur vos logiciels métiers, vos drives. La confiance et la confidentialité sont les maîtres mots.</p>									
+									<p>Le télétravail permet de réaliser des économies : pas de bureau dédié, j'utilise mon matériel et vous ne payez que le travail réalisé.</p>
 									</ul>
 									<br>
 								</div>
-										<p><span class="image right"><img src="images/teletravail.jpg" alt="" /></span><strong>Votre secrétaire sur site :</strong> Je travaille dans vos locaux : une table où je peux poser mon ordinateur portable suffit.
-											<br>La confiance est le maitre mot : je peux venir en votre absence.</p>
+										<p><span class="image right"><img src="images/teletravail.jpg" alt="" /></span><strong>Votre secrétaire sur site :</strong> 
+											<p>Je travaille dans vos locaux : une table où je peux poser mon ordinateur portable suffit.</p>
+											<p>Nous pouvons convenir, à votre convenance, de mon intervention certains jours dans la semaine ou pour certaines tâches (préparation d’un dossier de plaidoirie, en début de mois pour aide à la préparation comptable).</p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="prestations.html" class="button primary">Details des prestations</a></li>
@@ -135,12 +135,12 @@
 					<footer id="footer">
 						<section>
 							<h2>A propos</h2>
-							<p>Je suis assistante freelance à Lauris. J'interviens dans vos bureaux aux alentours d'Aix-en-Provence et de Salon-de-Provence ou en télétravail.</p>
+							<p>Je suis assistante freelance à Lauris. J'interviens dans vos bureaux aux alentours d'Aix-en-Provence, de Salon-de-Provence, de Cavaillon ou en télétravail.</p>
 						</section>
 						<section>
 							<h2>Contact</h2>
 							<dl class="alt">
-								<dt>Telephone</dt>
+								<dt>Téléphone</dt>
 								<dd>+33 6 52 60 96 49</dd>
 								<dt>Email</dt>
 								<dd><a href="#">laboitazerty@gmail.com</a></dd>
