--- a/azerty.html
+++ b/azerty.html
@@ -33,14 +33,14 @@
 								</ul>
 								<h2>Qui suis-je ?</h2>
 								<p>Titulaire d'une <strong>maîtrise de droit privé</strong> et du diplôme de l'Institut des Sciences Pénales et de Criminologie, j'ai suivi également une <strong>formation en secrétariat et informatique</strong>.
-									<br><br>Je possède une <strong>expérience professionnelle variée</strong> aussi bien dans le domaine juridique que dans le secrétariat classique.
+									<br><br>Je possède une <strong>expérience professionnelle variée</strong> aussi bien dans le domaine juridique que dans le secrétariat classique et secrétariat comptable.
 									<br>J'ai été <strong>secrétaire juridique</strong> salariée pendant plus de sept ans dans plusieurs cabinets d’avocats, et dans une étude notariale.
 									<br>J'ai approfondi mes connaissances juridiques en tant qu’<strong>informatrice juriste</strong> au Centre d'Information des Droits et des Familles.
 									<br>J'ai également travaillé comme <strong>secrétaire commerciale</strong> et comme <strong>secrétaire comptable</strong>.
 									<br>J’ai pu effectuer le <strong>suivi juridique</strong> des dossiers d'une entreprise. 
 									<br>>Durant ces 10 années d'expérience, j’ai prouvé ma <strong>capacité d’adaptation</strong> à divers secteurs d’activité et développé mon <strong>savoir-faire</strong>.
-									<br><br>La boit'AZERTY est née le 17 juillet 2014 de la volonté de proposer mes services non pas à une seule société mais à plusieurs, ainsi qu'aux particuliers.
-									<br>Le besoin est réel pour les sociétés qui débutent, dont le volume de travail ne justifie pas l'emploi d'un salarié à temps plein ou dont les ressources ne permettent pas de financer un salaire (avec la lourdeur des charges sociales).</p>
+									<br><br>La boit'AZERTY est née en 2014 de la volonté de proposer mes services non pas à une seule société mais à plusieurs.
+									<br>Le besoin est réel pour les sociétés qui débutent, dont le volume de travail ne justifie pas l'emploi d'un salarié à temps plein ou dont les ressources ne permettent pas de financer un salaire.</p>
 								<span class="image main"><img src="images/teletravail.jpg" alt="" /></span>	
 							</section>
 
@@ -50,12 +50,12 @@
 					<footer id="footer">
 						<section>
 							<h2>A propos</h2>
-							<p>Je suis assistante freelance à Lauris. J'interviens dans vos bureaux aux alentours d'Aix-en-Provence et de Salon-de-Provence ou en télétravail.</p>
+							<p>Je suis assistante freelance à Lauris. J'interviens dans vos bureaux aux alentours d'Aix-en-Provence, de Salon-de-Provence, de Cavaillon ou en télétravail.</p>
 						</section>
 						<section>
 							<h2>Contact</h2>
 							<dl class="alt">
-								<dt>Telephone</dt>
+								<dt>Téléphone</dt>
 								<dd>+33 6 52 60 96 49</dd>
 								<dt>Email</dt>
 								<dd><a href="#">laboitazerty@gmail.com</a></dd>
